# Tactics

./: .gitignore  README.md  stack.yaml  tactics.cabal
src/: Main.hs  Vectores.hs
