name:                tactics
version:             0.1.0.0
synopsis:            Tactics board game
description:         Please see README.md
homepage:            https://github.com/nandotorterolo/Tactics
license:             BSD3
license-file:        LICENSE
author:              Torterolo_Caamaño_Fernández
maintainer:          example@example.com
copyright:           None
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tactics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, array, random
